fix an addition error, add decimal button functionality, calculator no longer gets stuck after pressing equals and is now capable of making subsequent calculations

--- a/style.css
+++ b/style.css
@@ -32,7 +32,9 @@ body{
 }
 
 .calculation, .result{
-    font-style: sans-serif rgb(243, 131, 150);
+    flex-shrink: 1;
+    color: rgb(236, 117, 182);
+    font-style: sans-serif;
     margin: 3px;
 }
 
